EPMUII-8047: - fixed styles of nifti saving window

--- a/src/ui/Modals/Modals.module.css
+++ b/src/ui/Modals/Modals.module.css
@@ -133,6 +133,10 @@
   flex-direction: column;
 }
 
+.input_label_left {
+  margin-right: 5px;
+}
+
 .input {
   flex-grow: 1;
   border: 1px solid var(--dark-gray);
